--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -6,7 +6,7 @@
     tools:context=".Fragments.SettingsFragment">
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/historyRecView"
+        android:id="@+id/byPriceRecView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
