--- a/app/src/main/res/layout/historyitem.xml
+++ b/app/src/main/res/layout/historyitem.xml
@@ -42,4 +42,12 @@
 
     </RelativeLayout>
 
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/historuListRecView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        android:paddingLeft="8dp"
+        android:paddingRight="8dp" />
+
 </android.support.v7.widget.CardView>
