--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -15,10 +15,10 @@
         android:id="@+id/navigation_history"
         android:icon="@drawable/round_history_24"
         android:title="@string/title_history" />
-    <item
-        android:id="@+id/navigation_settings"
-        android:icon="@drawable/round_settings_24"
-        android:title="@string/title_settings" />
+    <!--<item-->
+        <!--android:id="@+id/navigation_settings"-->
+        <!--android:icon="@drawable/round_settings_24"-->
+        <!--android:title="@string/title_settings" />-->
 
 
 </menu>
