--- a/app/src/main/res/layout/historyitem.xml
+++ b/app/src/main/res/layout/historyitem.xml
@@ -10,8 +10,8 @@
     android:layout_marginBottom="4dp"
     android:layout_marginLeft="8dp"
     android:layout_marginRight="8dp"
-    card_view:cardCornerRadius="10dp"
-    card_view:cardElevation="3dp">
+    card_view:cardCornerRadius="1dp"
+    card_view:cardElevation="1dp">
 
     <RelativeLayout
         android:layout_width="wrap_content"
@@ -26,7 +26,7 @@
             android:layout_alignParentStart="true"
             android:padding="8dp"
             android:textColor="#000000"
-            android:textSize="24dp"
+            android:textSize="24sp"
             tools:text="24.12.1964" />
 
         <TextView
@@ -42,11 +42,19 @@
 
     </RelativeLayout>
 
+    <View
+        android:id="@+id/divider"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="?android:attr/listDivider"
+        android:layout_marginTop="42dp"/>
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/historuListRecView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="40dp"
+        android:paddingBottom="5dp"
         android:paddingLeft="8dp"
         android:paddingRight="8dp" />
 
