--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="colorPrimary">#7637ff</color>
     <color name="colorPrimaryDark">#6b26ff</color>
     <color name="colorAccent">#661fff</color>
-    <color name="grey">#661fff</color>
+    <color name="grey">#ededed</color>
     <color name="White">#FFF</color>
     <color name="secondaryDark">#661fff</color>
     <color name="primaryDark">#661fff</color>
